added code to upload new data sources from a bed file.
now the database and browser uri are configured at startup, to make it more flexible to redeploy

I've also added an additional interface to add intervals to a named track in the browser, so now the annotator does this every time it updates the coordinates.

found a way to refactor things so that the injector can handle wiring shared state

--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,11 @@
             <version>2.1</version>
         </dependency>-->
         <dependency>
+	<groupId>commons-validator</groupId>
+	<artifactId>commons-validator</artifactId>
+	<version>1.4.0</version>
+</dependency>
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>4.3.8.Final</version>
